# raffle-contracts

./: Cargo.toml  README.md
bash-scripts/: i.sh  store.sh  verify-code-hash.sh  verify-contract-code-hash.sh
contracts/raffles/: README.md
contracts/raffles/src/: contract.rs  execute.rs  msg.rs  state.rs
proposals/: store-raffles.md
schema/: raffles.json
schema/raw/: execute.json  instantiate.json
scripts/: Cargo.toml
test-suite/: Cargo.toml
test-suite/src/: common_setup.rs  lib.rs
test-suite/src/common_setup/: contract_boxes.rs  setup_raffle.rs
test-suite/src/raffle/tests/: config_coverage.rs  fee_discounts.rs  init.rs  integration_tests.rs
ts/: codegen.ts  package.json
ts/src/: Raffle.client.ts  Raffle.message-composer.ts  Raffle.react-query.ts  Raffle.types.ts  bundle.ts
